--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
                 </div>
                 
                 <div class="order-summary">
-                    <h4><i class="fas fa-receipt"></i> Order Summary</h4>
+                    <h4><i class="fas fa-receipt"></i><strong>Order Summary</strong> </h4>
                     <div class="order-items-list" id="order-items-list">
                         <!-- Order items will be inserted here -->
                     </div>
@@ -313,7 +313,7 @@
         <i class="fas fa-check-circle" style="font-size: 2rem;"></i>
         <div>
             <h4 style="margin-bottom: 5px;">Order Placed Successfully!</h4>
-            <p id="success-message-text">Your order has been sent via WhatsApp.</p>
+            <<p id="success-message-text">Order Placed Successful</p>
         </div>
     </div>
     
